# rlidentity

./: .gitignore  .gitmodules  CMakeLists.txt  MinHook.h  README.md  RLIdentity.cpp  RLIdentity.dll.sha256  RLIdentity.filters  RLIdentity.sln  RLIdentity.vcxproj  dllmain.cpp  index.html  injector.cpp  injector.exe.sha256  injector.vcxproj  libMinHook.h  package-lock.json  package.json
.github/workflows/: build.yml
RLIdentity/x64/Debug/: RLIdentity.dll.recipe  RLIdentity.vcxproj.FileListAbsolute.txt  vc143.idb
RLIdentity/x64/Debug/RLIdentity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RLIdentity.lastbuildstate  RLIdentity.write.1u.tlog  link.secondary.1.tlog
RLIdentity/x64/Release/: RLIdentity.dll.recipe  RLIdentity.iobj  RLIdentity.ipdb
RLIdentity/x64/Release/RLIdentity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RLIdentity.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RLIdentity.vcxproj  RLIdentity.vcxproj.filters  RLIdentityDLL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  updater-keys.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-main-commands.json  main.toml
src-tauri/src/: lib.rs  main.rs
