[package]
name = "rlidentitygui"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rlidentitygui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = '0.12', features = ['json'] }
tokio = { version = '1', features = ['full'] }
window-vibrancy = "0.5.2"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
dirs = "5"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

